video alignment issue fixed, shows alert on share click on unsupported browsers

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -99,6 +99,30 @@ a{
   display:none;
 }
 
+.online-video-size{
+  width: 460px;
+  height: 295px;
+}
+
+@media screen and (max-width: 576px) {
+  .main-container .header .branding {
+    max-width: 12rem;
+  }
+
+  .online-video-size{
+    width: 300px ;
+    height: 200px ;
+  }
+}
+
+/* Smartphones (portrait) ----------- */
+@media only screen
+and (max-width : 320px) {
+  .online-video-size{
+    max-width: 12rem ;
+  }
+}
+
 @media only screen and (max-width: 768px) {
   .search_form{
     display: none;
@@ -123,34 +147,8 @@ a{
     box-shadow: 0 4px 6px -5px hsl(0, 0%, 40%), inset 0px 4px 6px -5px hsl(0, 0%, 2%)
   }
 
-  .video-center{
-    max-width: 100%;
-  }
-
-  .video-size{
-    width: 350px !important;
-    height:150px !important;
-  }
-
   .online-video-size{
-    width: 350px !important;
-    height: 250px !important;
-  }
-}
-
-.online-video-size{
-  width: 560px;
-  height: 315px;
-}
-
-.video-size{
-  width: 560px;
-  height: 315px;
-}
-
-@media screen and (max-width: 576px) {
-  .main-container .header .branding {
-    max-width: 12rem;
+    max-width: 18rem;
   }
 }
 
